2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TODO:
	* src/glib.h:
	* src/gdate.c: New file.
	* src/gfile.c: New file.
	* src/Makefile.am: implemented g_file_get_contents and
	g_get_current_time.

	* test/tests.h:
	* test/file.c: New file.
	* test/Makefile.am: tests for the above.

2006-08-26  Raja R Harinath  <rharinath@novell.com>

	* src/sort.frag.h: Add copyright notice and some explanation.
	(increment): Remove null check.
	(combine_digits): Add 'list' argument to seed the summation.
	(do_sort): Use the empty or singleton tail as the seed, rather
	than calling 'increment'.

2006-08-25  Raja R Harinath  <rharinath@novell.com>

	* TODO: Remove 'List' entries.
	* src/Makefile.am (libeglib_la_SOURCES): Add sort.frag.h.
	* src/sort.frag.h: New.  Implements a "generic" bottom-up "counting"
	mergesort that works both on singly- and doubly-linked lists.
	* src/gslist.c (g_slist_sort): Use it.
	* src/glist.c (g_list_sort): Likewise.
	* src/glib.h (g_slist_sort, g_list_sort): Declare.
	* test/slist.c, test/list.c: Add basic testcases.

2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/gspawn.c: propagate errors from reads.
	* src/gpath.c: an empty PATH is like a NULL one.

2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/tests.h:
	* test/timer.c:
	* test/Makefile.am:
	* TODO:
	* src/glib.h:
	* src/gtimer.c:
	* src/Makefile.am: implemented GTimer.

2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/tests.h:
	* test/Makefile.am:
	* test/spawn.c:
	* src/gspawn.c:
	* src/glib.h:
	* src/Makefile.am: initial implentation of g_spawn_command_line_sync.
	Still need better error handling, but works for the most part.

2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/garray.c: grow faster so that the 'big' test does not crawl.

2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/shell.c:
	* src/gqueue.c: plugged leaks.

2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/path.c: