@@ -67,7 +67,6 @@ Important Groups:
 
 	* File 
 	     11 g_file_test
-	      3 g_file_open_tmp
 	
 	* Miscelaneous
 	      5 g_newa
